# mnml-msg-mandrill

./: Cargo.toml  README.md
src/: app.rs  config.rs  keys.rs  main.rs  mandrill.rs  ui.rs
